// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SudokuHeader renders component with all props 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c2 {
  font-size: 16px;
  font-weight: 500;
  color: #24292ebf;
}

.c3 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  padding: 6px 8px;
  font-size: 14px;
  cursor: pointer;
  color: #1648ff;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c3:focus {
  outline: none;
  text-decoration: none;
}

.c3:hover {
  color: #fff;
  background-color: #1236bb14;
  text-decoration: none;
}

.c3:active {
  background-color: #1648ff;
  color: #fff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c4 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  padding: 6px 8px;
  font-size: 14px;
  cursor: pointer;
  color: #1648ff;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  background-color: #ffffff;
}

.c4:focus {
  outline: none;
  text-decoration: none;
}

.c4:hover {
  color: #fff;
  background-color: #1236bb14;
  text-decoration: none;
}

.c4:active {
  background-color: #1648ff;
  color: #fff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c0 {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  margin-bottom: 5px;
  position: relative;
}

.c6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.43;
  color: #3d4150;
}

.c5 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 38%;
}

.c7 {
  color: #000000;
  font-size: 13px;
  font-weight: 600;
  margin-left: 4px;
}

<div
    class="c0 x"
  >
    <span
      class="c1"
    >
      <div
        class="c2"
      >
        Difficulty:
      </div>
      <div
        class="c3"
      >
        Easy
      </div>
      <div
        class="c4"
      >
        Medium
      </div>
      <div
        class="c3"
      >
        Hard
      </div>
      <div
        class="c3"
      >
        Expert
      </div>
    </span>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        Mistakes:
        <span
          class="c7"
        >
          2/3
        </span>
      </div>
      <div
        class="c6"
      >
        Score:
        <span
          class="c7"
        >
          2137
        </span>
      </div>
      <div
        class="c6"
      >
        00:00
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SudokuHeader renders component with required props 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c2 {
  font-size: 16px;
  font-weight: 500;
  color: #24292ebf;
}

.c3 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  padding: 6px 8px;
  font-size: 14px;
  cursor: pointer;
  color: #1648ff;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c3:focus {
  outline: none;
  text-decoration: none;
}

.c3:hover {
  color: #fff;
  background-color: #1236bb14;
  text-decoration: none;
}

.c3:active {
  background-color: #1648ff;
  color: #fff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c4 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  padding: 6px 8px;
  font-size: 14px;
  cursor: pointer;
  color: #1648ff;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  background-color: #ffffff;
}

.c4:focus {
  outline: none;
  text-decoration: none;
}

.c4:hover {
  color: #fff;
  background-color: #1236bb14;
  text-decoration: none;
}

.c4:active {
  background-color: #1648ff;
  color: #fff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c0 {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  margin-bottom: 5px;
  position: relative;
}

.c6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.43;
  color: #3d4150;
}

.c5 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 38%;
}

.c7 {
  color: #000000;
  font-size: 13px;
  font-weight: 600;
  margin-left: 4px;
}

<div
    class="c0"
  >
    <span
      class="c1"
    >
      <div
        class="c2"
      >
        Difficulty:
      </div>
      <div
        class="c3"
      >
        Easy
      </div>
      <div
        class="c4"
      >
        Medium
      </div>
      <div
        class="c3"
      >
        Hard
      </div>
      <div
        class="c3"
      >
        Expert
      </div>
    </span>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        Mistakes:
        <span
          class="c7"
        >
          2/3
        </span>
      </div>
      <div
        class="c6"
      >
        Score:
        <span
          class="c7"
        >
          2137
        </span>
      </div>
      <div
        class="c6"
      >
        00:00
      </div>
    </div>
  </div>
</DocumentFragment>
`;
